Small changes to the intro

--- a/tex/Introduccion.tex
+++ b/tex/Introduccion.tex
@@ -4,23 +4,24 @@
 % Debido a que el grafeno solo presenta 3 electrones apareados de forma fija, queda un orbital $ p_z $ semilleno el cuál forma enlaces resonantes por toda la estructura, sin embargo estos orbitales se encuentran lo suficientemente localizados como para ser descritos por un modelo de enlace fuerte. Además estos orbitales son los principales responsables de las propiedades electrónicas del material, lo cuál lleva a la proposición de modelo con un orbital por átomo de carbono para el grafeno \autocite{Wallace1947}, que ha tenido éxito tremendo en simular las propiedades del grafeno.
 
 Las características electrónicas del grafeno han causado fascinación desde sus 
-primeros estudios debido a que al rededor de un par inequivalente de puntos mínimos en la banda de conducción, la energía presenta un cambio lineal respecto al vector de onda de los portadores de carga del material, formando una especie de valle en el cual los portadores de carga se comportan como Fermiones de Dirac no-masivos lo que le da a la región el nombre de \emph{Valles de Dirac} 
+primeros estudios debido a que al rededor de un par inequivalente de puntos mínimos en la banda de conducción, la energía presenta un cambio lineal respecto al vector de onda de los portadores de carga del material, formando una especie de valle en el cual los portadores de carga se comportan como Fermiones de Dirac no-masivos, lo que le da a la región el nombre de \emph{Valles de Dirac} 
 \autocite{DiVincenzo1984, Gorbar2002, Kopelevich2003}.
 
-Asociado a los valles de Dirac se encuentran entonces un grado de libertad denominados como `\emph{iso-espín de valle}' o `\emph{índices de valle}', los cuales han sido considerados como portadores de información cuántica. 
-Esta área se le conoce en la actualidad como `\emph{valletrónica}' \autocite{Schaibley2016}, y se desarrolla en paralelo a la \emph{espintrónica}.
-Ambas corrientes de investigación buscan alcanzar una electrónica de ultra-baja potencia, ya que la información pudiera ser transportada y procesada sin la necesidad de movilizar cargas, lo cual es la causa principal de disipación en la electrónica clásica. 
+Asociado a los valles de Dirac se encuentra entonces un grado de libertad denominado como `\emph{iso-espín de valle}' o `\emph{índices de valle}', el cual ha sido considerado como portador de información cuántica. 
+Esta área es conocida en la actualidad como `\emph{valletrónica}' \autocite{Schaibley2016}, y se desarrolla en paralelo a la \emph{espintrónica}.
+Ambas corrientes de investigación buscan alcanzar una electrónica de ultra-baja potencia, donde la información pudiera ser transportada y procesada sin la necesidad de movilizar cargas, siendo esto la causa principal de disipación en la electrónica clásica. 
 El interés por la valletrónica sobre la espintrónica radica en la robustez de los grados de libertad frente a perturbaciones electromagnéticas, ya que los valles no se acoplan con campos magnéticos externos como los espines.
 
-Debido a la sencillez que presentan sus bandas energéticas, el interés asociado a sus peculiares portadores de carga, así como su fabricación cada vez más extendida hacen del grafeno un candidato excepcional para los estudios referentes a la valletrónica. 
+La sencillez que presentan sus bandas energéticas, el interés asociado a sus peculiares portadores de carga, así como su fabricación cada vez más extendida hacen del grafeno un candidato excepcional para los estudios referentes a la valletrónica. 
 
 La aplicación de la valletrónica a tecnologías del mundo real depende del tiempo, que a su vez implica la distancia, en el cuál la información codificada mediante los índices de valle se pierde debido a la evolución del sistema a un estado de equilibrio termodinámico, correspondiente al \emph{tiempo de relajación de valle}.
 
 Para simular transporte electrónico existen distintos enfoques comunes, como la ecuación de transporte de Boltzmann y el formalismo de Landau-Büttiker. 
 En este trabajo utilizaremos cálculos numéricos eficientes de formulación de Kubo y Kubo-Bastin, que en su expresión más general describen la respuesta lineal de un sistema sujeto a perturbaciones dependientes del tiempo \autocite{Garcia2018a}. 
-Las formulas se pueden desarrollar en base a funciones con el Hamiltoniano del sistema como argumento; es por esto que para estudiar sistemas grandes, de escalas experimentales ($ N > 10^6 $ donde $ N $ es el número de átomos), es necesario que el costo computacional escale linealmente con $ N $, estos algoritmos se conocen como de orden-$ N $ o $ \mathcal{O}(N) $ y forman la base de los métodos de Transporte Cuántico de Escalamiento Lineal (LSQT por sus siglas en inglés).
+Las fórmulas se pueden desarrollar en base a funciones con el Hamiltoniano del sistema como argumento; es por esto que para estudiar sistemas grandes, de escalas experimentales ($ N > 10^6 $ donde $ N $ es el número de átomos), es necesario que el costo computacional escale linealmente con $ N $, estos algoritmos se conocen como de orden-$ N $ o $ \mathcal{O}(N) $ y forman la base de los métodos de Transporte Cuántico de Escalamiento Lineal (LSQT por sus siglas en inglés).
 
 La aproximación de funciones matriciales mediante polinomios ortogonales clásicos, así como el \emph{Kernel Polynomial Method} (KPM) con polinomios de Chebyshev, en el que se atenúan las oscilaciones de Gibbs, corresponden a métodos numéricos sobre los cuales se pueden desarrollar algoritmos $ \mathcal O(N) $. 
-Si se trabaja el Hamiltoniano con una base de enlace fuerte (TB por sus siglas en inglés) en el espacio real, lo que permite representar el operador como una matriz altamente dispersa y evita la necesidad de diagonalizar para trabajar en su auto-espacio, entonces el método resultante puede ser de alta eficiencia incluso para sistemas de gran tamaño o que no presenta simetrías de traslación.
+Si se trabaja el Hamiltoniano con una base de enlace fuerte (TB por sus siglas en inglés) en el espacio real, el método resultante puede ser de alta eficiencia incluso para sistemas de gran tamaño o que no presentan simetrías de traslación;
+Esto debido a que se puede representar el operador como una matriz altamente dispersa y evita la necesidad de diagonalizar para trabajar en su auto-espacio.
 
-De modo que el presente trabajo busca desarrollar un programa capaz de analizar la evolución temporal de la dinámica de valles de Dirac en el grafeno con el fin de estimar el tiempo de relajación de los índices de valle. Para el algoritmo se utilizará la formulación de Kubo aproximado mediante el KPM, con un modelo TB en espacio real. el algoritmo será validado por comparación directa con un modelo teórico de cadena lineal mono-atómica, antes de ser aplicado a un sistema de grafeno. 
+El presente trabajo busca desarrollar un programa capaz de analizar la evolución temporal de la dinámica de valles de Dirac en el grafeno con el fin de estimar el tiempo de relajación de los índices de valle. Para el algoritmo se utilizará la formulación de Kubo aproximado mediante el KPM, con un modelo TB en espacio real. El algoritmo será validado por comparación directa con un modelo teórico de cadena lineal mono-atómica, antes de ser aplicado a un sistema de grafeno. 
