Short image description added

--- a/tex/Operador_Evolucion_Temporal/Convergencia_de_la_Aproximacion.tex
+++ b/tex/Operador_Evolucion_Temporal/Convergencia_de_la_Aproximacion.tex
@@ -58,7 +58,7 @@ $\frac{t}{\tau} = \tilde{t} \in [10^0, 10^4)$.
 \begin{figure}[htb]
 	\centering
 	\input{./img/normJ_n(t).pgf}
-	\caption{Gráficas correspondientes al valor absoluto de las funciones de Bessel normalizadas en función de $n$ para valores menores de $1\times10^{-4}$; el eje $x$ se presenta escalado por el factor $\tilde{t}^{-1}$. Se puede ver como a partir de un término crítico $n_c$ las funciones de Bessel decaen pronunciadamente, donde $\frac n{\tilde t} \propto 1$, especialmente para valores altos de $\tilde{t}$.}
+	\caption[Funciones de Bessel Normalizadas]{Gráficas correspondientes al valor absoluto de las funciones de Bessel normalizadas en función de $n$ para valores menores de $1\times10^{-4}$; el eje $x$ se presenta escalado por el factor $\tilde{t}^{-1}$. Se puede ver como a partir de un término crítico $n_c$ las funciones de Bessel decaen pronunciadamente, donde $\frac n{\tilde t} \propto 1$, especialmente para valores altos de $\tilde{t}$.}
 	\label{fig:normJ_n(t)}
 \end{figure}
 
@@ -71,7 +71,7 @@ utilizar.
 \begin{figure}[htb]
 	\centering
 	\input{./img/comparison.pgf}
-	\caption{Comparación entre el cálculo analítico y la aproximación mediante polinomios de Chebyshev para el valor esperado amortiguado (por un factor $\alpha = 5\times 10^{-3}$) del operador de evolución temporal $\hat{U} = \exp(-i \hat{S}_z \tilde{t})$, $\hat{S}_z$ es la matriz de Pauli para el eje $z$ y $\tilde{t} = \frac{J_{\mathrm{ex}}t}{\hbar}$ donde $J_{\mathrm{ex}}\approxeq 100\milli\electronvolt$ es el acoplamiento de canje. La expresión analítica correspondiente al valor esperado es $2\cos{\tilde{t}}$. En el recuadro se muestra la norma Euclideana cuadrada de la diferencia entre la función correspondiente al cálculo analítico $f$ y su aproximación en serie de Chebyshev de orden $N$.}
+	\caption[Valor esperado para el operador de evolución temporal amortiguado]{Comparación entre el cálculo analítico y la aproximación mediante polinomios de Chebyshev para el valor esperado amortiguado (por un factor $\alpha = 5\times 10^{-3}$) del operador de evolución temporal $\hat{U} = \exp(-i \hat{S}_z \tilde{t})$, $\hat{S}_z$ es la matriz de Pauli para el eje $z$ y $\tilde{t} = \frac{J_{\mathrm{ex}}t}{\hbar}$ donde $J_{\mathrm{ex}}\approxeq 100\milli\electronvolt$ es el acoplamiento de canje. La expresión analítica correspondiente al valor esperado es $2\cos{\tilde{t}}$. En el recuadro se muestra la norma Euclideana cuadrada de la diferencia entre la función correspondiente al cálculo analítico $f$ y su aproximación en serie de Chebyshev de orden $N$.}
 	\label{fig:comparison}
 \end{figure}
 
