Wrote the x-inyection in term of sines and cosines

--- a/tex/Modelo_de_Cadena_Lineal/Dinamica_de_Espin.tex
+++ b/tex/Modelo_de_Cadena_Lineal/Dinamica_de_Espin.tex
@@ -85,5 +85,5 @@ Si la inyección ocurre en $z$ se tiene que $P(0,0)=\ket{+}\bra{+}$, por lo que 
 \subsubsection{Inyección en $ \hat{\vector x} $}
 Si la inyección ocurre en $x$ se tiene que $P(\frac{\pi}{2},0) = \ketbra{+, \frac{\pi}{2}, 0}$, por lo que el vector espín será
 \begin{equation}
-	\expval{\vector{\hat{S}}(E_{\rm{F}},t)} = \frac{1}{2} \left[ \Re{\exp(\frac{2i J_{\rm ex } t}{\hbar})} \hat{\vector x} + \Im{\exp(\frac{2i J_{\rm ex } t}{\hbar})} \hat{\vector y} \right]  \smashoperator{\sum_{k, s}} \delta\left(\varepsilon(k) - sJ_{\rm ex} -E \right).
+	\expval{\vector{\hat{S}}(E_{\rm{F}},t)} = \frac{1}{2} \left[ \cos(\frac{2 J_{\rm ex } t}{\hbar}) \hat{\vector x} + \cos(\frac{2 J_{\rm ex } t}{\hbar}) \hat{\vector y} \right]  \smashoperator{\sum_{k, s}} \delta\left(\varepsilon(k) - sJ_{\rm ex} -E \right).
 \end{equation}
