--- a/tex/Apendices/LC_Operador_Espin-Magnetizacion_en_Z.tex
+++ b/tex/Apendices/LC_Operador_Espin-Magnetizacion_en_Z.tex
@@ -33,5 +33,6 @@ La inyección en $ \hat{\vector x} $ implica que $ P(\frac{\pi}{2}, 0) = \ketbra
 	\expval{\vector{\hat{S}}(E_{\rm{F}},t)} &= \frac{1}{4}\smashoperator{\sum_{k, s, s', s''}} \exp(\frac{i J_{\rm ex } t (s - s')}{\hbar}) \left[(1 - \delta^s_{s'}) ( \hat{\vector x} + s'i \hat{\vector y}) + s\delta^s_{s'}\hat{\vector z} \right] \delta\left(\varepsilon(k) - s''J_{\rm ex} -E \right), \\
 	\expval{\vector{\hat{S}}(E_{\rm{F}},t)} &= \frac{1}{4}\smashoperator{\sum_{s}} \left[ \exp(\frac{s2i J_{\rm ex } t}{\hbar}) ( \hat{\vector x} - si \hat{\vector y}) + s\hat{\vector z} \right] \smashoperator{\sum_{k, s''}} \delta\left(\varepsilon(k) - s''J_{\rm ex} -E \right), \\
 	\expval{\vector{\hat{S}}(E_{\rm{F}},t)} &= \frac{1}{4} \left[ \exp(\frac{2i J_{\rm ex } t}{\hbar}) ( \hat{\vector x} - i \hat{\vector y}) + \exp(\frac{-2i J_{\rm ex } t}{\hbar}) ( \hat{\vector x} + i \hat{\vector y}) + \hat{\vector z} - \hat{\vector z} \right]  \smashoperator{\sum_{k, s''}} \delta\left(\varepsilon(k) - s''J_{\rm ex} -E \right), \\
-	\expval{\vector{\hat{S}}(E_{\rm{F}},t)} &= \frac{1}{2} \left[ \Re{\exp(\frac{2i J_{\rm ex } t}{\hbar})} \hat{\vector x} + \Im{\exp(\frac{2i J_{\rm ex } t}{\hbar})} \hat{\vector y} \right]  \smashoperator{\sum_{k, s}} \delta\left(\varepsilon(k) - sJ_{\rm ex} -E \right). \numberthis
+	\expval{\vector{\hat{S}}(E_{\rm{F}},t)} &= \frac{1}{2} \left[ \Re{\exp(\frac{2i J_{\rm ex } t}{\hbar})} \hat{\vector x} + \Im{\exp(\frac{2i J_{\rm ex } t}{\hbar})} \hat{\vector y} \right]  \smashoperator{\sum_{k, s}} \delta\left(\varepsilon(k) - sJ_{\rm ex} -E \right), \\
+	\expval{\vector{\hat{S}}(E_{\rm{F}},t)} &= \frac{1}{2} \left[ \cos(\frac{2 J_{\rm ex } t}{\hbar}) \hat{\vector x} + \sin(\frac{2 J_{\rm ex } t}{\hbar}) \hat{\vector y} \right]  \smashoperator{\sum_{k, s}} \delta\left(\varepsilon(k) - sJ_{\rm ex} -E \right). \numberthis
 \end{align*}
