Short chapter title added

--- a/tex/Modelo_de_Cadena_Lineal.tex
+++ b/tex/Modelo_de_Cadena_Lineal.tex
@@ -1,4 +1,4 @@
-\chapter{Modelo de Cadena Lineal Mono-Atómica}
+\chapter[Modelo de Cadena Lineal]{Modelo de Cadena Lineal Mono-Atómica}
 
 Como primer modelo a analizar, se utilizará un sólido cristalino mono-atómico de una sola dimensión (cadena lineal) \figref{fig:LCscheme}. 
 
@@ -21,7 +21,7 @@ Como primer modelo a analizar, se utilizará un sólido cristalino mono-atómico
 		node[midway, fill=white] {$t$};
 	}
 	\end{tikzpicture}
-	\caption{Esquema de una cadena lineal mono-atómica, con una distancia inter-atómica $a$, energía in-situ $\epsilon_0$ y una amplitud de salto entre vecinos cercanos $t$.\label{fig:LCscheme}}
+	\caption[Esquema de una cadena lineal mono-atómica]{Esquema de una cadena lineal mono-atómica, con una distancia inter-atómica $a$, energía in-situ $\epsilon_0$ y una amplitud de salto entre vecinos cercanos $t$.\label{fig:LCscheme}}
 \end{figure}
 
 Dicho sistema se describe por el siguiente hamiltoniano de enlace fuerte
