Created the Kubo Bastin chapter

--- a/TEG-ANGEL.tex
+++ b/TEG-ANGEL.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt, letterpaper, twoside, openany]{book}
+\documentclass[11pt, letterpaper, twoside, openany, draft]{book}
 
 \usepackage{TEG-ANGEL}
 
@@ -25,6 +25,8 @@
 	%\include{./tex/Planteamiendo_del_Problema}
 	
 	%\include{./tex/Antecedentes}
+	
+	\include{./tex/Formalismo_de_Kubo}
 	
 	\include{./tex/Polinomios_de_Chebyshev}
 	
