--- a/tex/Modelo_de_Cadena_Lineal/Dinamica_de_Espin.tex
+++ b/tex/Modelo_de_Cadena_Lineal/Dinamica_de_Espin.tex
@@ -1,6 +1,6 @@
 \section{Zeeman splitting and spin dynamics}
 
-Un tipo de sistema interesante son los ferromagnétos, donde el espín de sus electrones itinerantes interactúan con los momentos  magnéticos localizados típicamente en los orbitales $d$. Para describir esta situación, vamos a suponer que el sistema es ferromagnético y tiene una magnetización homogénea de $\textbf{M}=M_s\hat{u}_{\textbf{M}}$, donde $M_s$ su valor de saturación y $\hat{u}_{\textbf{M}}=(\sin\theta\cos\phi,\sin\theta\sin\phi,\cos\theta)$ su dirección definida por los ángulos $\phi$ y $\theta$. Luego, asumiremos que la magnetización se acopla con los electrones por medio de una interacción de intercambio cuantificada por el parámetro $J_{\rm Ex }$. Vamos a suponer ademas que el sistema puede ser modelado por una cadena lineal de primeros vecinos, en este caso, el Hamiltoniano es dado por:
+Un tipo de sistema interesante son los ferromagnétos, donde el espín de sus electrones itinerantes interactúan con los momentos  magnéticos localizados típicamente en los orbitales $d$. Para describir esta situación, vamos a suponer que el sistema es ferromagnético y tiene una magnetización homogénea de $\textbf{M}=M_s\hat{u}_{\textbf{M}}$, donde $M_s$ su valor de saturación y \[\hat{u}_{\textbf{M}}=(\sin\theta\cos\phi,\sin\theta\sin\phi,\cos\theta)\] su dirección definida por los ángulos $\phi$ y $\theta$. Luego, asumiremos que la magnetización se acopla con los electrones por medio de una interacción de intercambio cuantificada por el parámetro $J_{\rm Ex }$. Vamos a suponer ademas que el sistema puede ser modelado por una cadena lineal de primeros vecinos, en este caso, el Hamiltoniano es dado por:
 \begin{equation}{\label{eq:lc_HAM_Zeeman}}
 	\widehat{H} = \widehat{H}_0+\widehat{H}_{ex},
 \end{equation}
