Made the package modular to be able to use parts of the package in other projects

--- a/TEG-ANGEL.tex
+++ b/TEG-ANGEL.tex
@@ -1,6 +1,8 @@
-\documentclass[11pt, letterpaper, twoside, openany, draft]{book}
+\documentclass[11pt, letterpaper, twoside, openany]{book}
 
-\usepackage{TEG-ANGEL}
+\usepackage{TEG-ADPS}
+\usepackage{adpsgraphene}
+\latticevec{1cm}
 
 % Para eliminar los comentarios del documento, de-comentar la siguiente línea
 % \renewcommand{\comentario}[2]{}
@@ -26,7 +28,7 @@
 	
 	%\include{./tex/Antecedentes}
 	
-	\include{./tex/Formalismo_de_Kubo}
+	%\include{./tex/Formalismo_de_Kubo}
 	
 	\include{./tex/Polinomios_de_Chebyshev}
 	
