Changed the appedix presentation

--- a/TEG.bib
+++ b/TEG.bib
@@ -1,5 +1,24 @@
 % Encoding: UTF-8
 
+@Article{Garcia2018b,
+  author    = {Garcia, Jose H. and Vila, Marc and Cummings, Aron W. and Roche, Stephan},
+  title     = {Spin transport in graphene/transition metal dichalcogenide heterostructures},
+  doi       = {10.1039/C7CS00864C},
+  issn      = {1460-4744},
+  language  = {en},
+  number    = {9},
+  pages     = {3359--3379},
+  url       = {https://pubs.rsc.org/en/content/articlelanding/2018/cs/c7cs00864c},
+  urldate   = {2020-08-23},
+  volume    = {47},
+  abstract  = {Since its discovery, graphene has been a promising material for spintronics: its low spin–orbit coupling, negligible hyperfine interaction, and high electron mobility are obvious advantages for transporting spin information over long distances. However, such outstanding transport properties also limit the capability to engineer active spintronics, where strong spin–orbit coupling is crucial for creating and manipulating spin currents. To this end, transition metal dichalcogenides, which have larger spin–orbit coupling and good interface matching, appear to be highly complementary materials for enhancing the spin-dependent features of graphene while maintaining its superior charge transport properties. In this review, we present the theoretical framework and the experiments performed to detect and characterize the spin–orbit coupling and spin currents in graphene/transition metal dichalcogenide heterostructures. Specifically, we will concentrate on recent measurements of Hanle precession, weak antilocalization and the spin Hall effect, and provide a comprehensive theoretical description of the interconnection between these phenomena.},
+  file      = {Full Text PDF:https\://pubs.rsc.org/en/content/articlepdf/2018/cs/c7cs00864c:application/pdf},
+  journal   = {Chemical Society Reviews},
+  month     = may,
+  publisher = {The Royal Society of Chemistry},
+  year      = {2018},
+}
+
 @Book{Grosso2000,
   author    = {Giussepe Grosso and Giusseppe Parravicini},
   date      = {2000},
@@ -432,19 +451,6 @@
   pages        = {015006},
   url          = {http://stacks.iop.org/2515-7639/1/i=1/a=015006},
   volume       = {1},
-}
-
-@Article{Cummings2017,
-  author       = {Cummings, Aron W. and Garcia, Jose H. and Fabian, Jaroslav and Roche, Stephan},
-  date         = {2017-11},
-  journaltitle = {Physical Review Letters},
-  title        = {Giant Spin Lifetime Anisotropy in Graphene Induced by Proximity Effects},
-  doi          = {10.1103/PhysRevLett.119.206601},
-  issue        = {20},
-  pages        = {206601},
-  volume       = {119},
-  numpages     = {7},
-  publisher    = {American Physical Society},
 }
 
 @Article{Benitez2017,
@@ -884,6 +890,28 @@
   month     = {4},
   publisher = {{IOP} Publishing},
   year      = {1958},
+}
+
+@Article{Cummings2017,
+  author       = {Cummings, Aron W. and Garcia, Jose H. and Fabian, Jaroslav and Roche, Stephan},
+  date         = {2017-11},
+  journaltitle = {Physical Review Letters},
+  title        = {Giant Spin Lifetime Anisotropy in Graphene Induced by Proximity Effects},
+  doi          = {10.1103/PhysRevLett.119.206601},
+  issue        = {20},
+  number       = {20},
+  pages        = {206601},
+  url          = {https://link.aps.org/doi/10.1103/PhysRevLett.119.206601},
+  urldate      = {2020-08-23},
+  volume       = {119},
+  abstract     = {We report on fundamental aspects of spin dynamics in heterostructures of graphene and transition metal dichalcogenides (TMDCs). By using realistic models derived from first principles we compute the spin lifetime anisotropy, defined as the ratio of lifetimes for spins pointing out of the graphene plane to those pointing in the plane. We find that the anisotropy can reach values of tens to hundreds, which is unprecedented for typical 2D systems with spin-orbit coupling and indicates a qualitatively new regime of spin relaxation. This behavior is mediated by spin-valley locking, which is strongly imprinted onto graphene by TMDCs. Our results indicate that this giant spin lifetime anisotropy can serve as an experimental signature of materials with strong spin-valley locking, including graphene-TMDC heterostructures and TMDCs themselves. Additionally, materials with giant spin lifetime anisotropy can provide an exciting platform for manipulating the valley and spin degrees of freedom, and for designing novel spintronic devices.},
+  file         = {Full Text PDF:https\://journals.aps.org/prl/pdf/10.1103/PhysRevLett.119.206601:application/pdf;:/home/adps/Dropbox/Tesis/Bibliografia/Cummings2017.pdf:PDF},
+  groups       = {LSQT},
+  journal      = {Physical Review Letters},
+  month        = {11},
+  numpages     = {7},
+  publisher    = {American Physical Society},
+  year         = {2017},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
