--- a/tex/Apendices.tex
+++ b/tex/Apendices.tex
@@ -8,7 +8,7 @@
 	
 	\input{./tex/Apendices/Conmutador_U_Sigma}
 	
-	%\input{./tex/Apendices/Operador_de_Rotacion_de_Espin}
+	\input{./tex/Apendices/Operador_de_Rotacion_de_Espin}
 	
 	\input{./tex/Apendices/LC_Operador_de_Proyeccion_Cuantico}
 	
