--- a/tex/Apendices/LC_Operador_de_Proyeccion_Cuantico.tex
+++ b/tex/Apendices/LC_Operador_de_Proyeccion_Cuantico.tex
@@ -23,7 +23,7 @@ Si asumimos el caso particular $ \hat{u}_{\vector M} = \hat{z} \implies \sigma_u
 \begin{align*}
 	\sum_{k, s} \delta(\varepsilon(k) - sJ_{\rm ex} - E) &= \frac{N}{2\pi} \sum_s \smashoperator{\int_0^{2\pi}} \delta(\varepsilon(ka) - sJ_{\rm ex} - E) d(ka), \\ 
 	\sum_{k, s} \delta(\varepsilon(k) - sJ_{\rm ex} - E) &= \frac{N}{2\pi} \sum_s \smashoperator{\int_0^{2\pi}} \delta(-2t\cos(ka) - sJ_{\rm ex} - E) d(ka), \\ 
-	\intertext{aplicando la propiedad de la integral de la delta de Dirac compuesta por una función $ f $, $ {\int_R} \delta(f(x)) dx = \sum_i \abs{f'(x_i)}^{-1} $, donde $ x_i $ son los ceros de la función $ f $ en la región $ R $, obtenemos entonces}
+	\intertext{aplicando la propiedad de la integral de la delta de Dirac compuesta por una función $ f $, \[ {\int_R} \delta(f(x)) dx = \sum_i \abs{f'(x_i)}^{-1},\]  donde $ x_i $ son los ceros de la función $ f $ en la región $ R $, obtenemos entonces}
 	\sum_{k, s} \delta(\varepsilon(k) - sJ_{\rm ex} - E) &= \frac{N}{2\pi} \sum_{s, i}  \abs{2ta\sin(k_ia)}^{-1}, \\ 
 	\sum_{k, s} \delta(\varepsilon(k) - sJ_{\rm ex} - E) &= \frac{N}{4\pi\abs{t}a} \sum_{s}  \left[ \abs{\sin(\acos(\frac{E + sJ_{\rm ex}}{-2t}))}^{\rlap{$\scriptstyle -1$}} + \abs{\sin(2\pi - \acos(\frac{E + sJ_{\rm ex}}{-2t}))}^{-1} \right], \\ 
 	\sum_{k, s} \delta(\varepsilon(k) - sJ_{\rm ex} - E) &= \frac{N}{2\pi\abs{t}a} \sum_{s} \abs{\sin(\acos(\frac{E + sJ_{\rm ex}}{-2t}))}^{-1}, \\ 
