--- a/tex/Apendices/Operador_de_Rotacion_de_Espin.tex
+++ b/tex/Apendices/Operador_de_Rotacion_de_Espin.tex
@@ -9,7 +9,7 @@
 	\exp(\frac{i\widehat{H}_{\rm ex}t}{\hbar}) &= \widehat{R}_u(2\Theta).
 \end{align*}
 
-(Tengo entendido que el operador de rotación de espín es $ \widehat{R}(\vector{\hat{n}}, \theta) = \exp(-i\frac{\theta}{\hbar}\vector{S}\cdot\vector{\hat{n}}) = \exp(-i\frac{\theta}{2} \vector{\sigma}\cdot\vector{\hat{n}}) $. Me causa curiosidad que cuando más arriba defines a $ \Theta $ incluyes el signo y no utilizas el factor de 2. Al final no sería muy distinto.)
+\comentario{Tengo entendido que el operador de rotación de espín es \[ \widehat{R}(\vector{\hat{n}}, \theta) = \exp(-i\frac{\theta}{\hbar}\vector{S}\cdot\vector{\hat{n}}) = \exp(-i\frac{\theta}{2} \vector{\sigma}\cdot\vector{\hat{n}}). \] Me causa curiosidad que cuando más arriba defines a $ \Theta $ incluyes el signo y no utilizas el factor de 2. Al final no sería muy distinto.}
 
 La expresión \eqref{eq:spinRotOP} se puede reescribir mediante la ecuación de Euler
 \begin{align*}
