--- a/tex/Portada.tex
+++ b/tex/Portada.tex
@@ -46,5 +46,8 @@
 	{\large \today}
 \end{titlepage}
 
+\pdfbookmark[0]{\contentsname}{toc}
 \tableofcontents
+\cleardoublepage
+\pdfbookmark[0]{\listfigurename}{tof}
 \listoffigures
