First draft for the linear chain conductivity approximated using gaussian functions

--- a/TEG-ANGEL.tex
+++ b/TEG-ANGEL.tex
@@ -7,7 +7,7 @@
 % Para eliminar los comentarios del documento, de-comentar la siguiente línea
 % \renewcommand{\comentario}[2]{}
 
-% \includeonly{./tex/Portada}
+\includeonly{./tex/Modelo_de_Cadena_Lineal}
 
 \begin{document}
 	\frontmatter
