--- a/tex/Apendices.tex
+++ b/tex/Apendices.tex
@@ -4,13 +4,13 @@
 \appendixpage
 
 %\begin{appendices}
-	\input{./tex/Apendices/Int_sinsqrd_cosm_cosn}
+	%\input{./tex/Apendices/Int_sinsqrd_cosm_cosn}
 	
-	\input{./tex/Apendices/Conmutador_U_Sigma}
+	%\input{./tex/Apendices/Conmutador_U_Sigma}
 	
-	\input{./tex/Apendices/Operador_de_Rotacion_de_Espin}
+	%\input{./tex/Apendices/Operador_de_Rotacion_de_Espin}
 	
 	\input{./tex/Apendices/LC_Operador_de_Proyeccion_Cuantico}
 	
-	\input{./tex/Apendices/LC_Operador_Espin-Magnetizacion_en_Z}
+	%\input{./tex/Apendices/LC_Operador_Espin-Magnetizacion_en_Z}
 %\end{appendices}
