--- a/tex/Modelo_de_Cadena_Lineal.tex
+++ b/tex/Modelo_de_Cadena_Lineal.tex
@@ -1,5 +1,8 @@
 \chapter[Modelo de Cadena Lineal]{Modelo de Cadena Lineal Mono-Atómica}
 
+\hyperref[ssec:aproxGauss]{\Huge\color{red}\bfseries Click aquí para ir a lo que es nuevo}
+\bigskip
+
 Como primer modelo a analizar, se utilizará un sólido cristalino mono-atómico de una sola dimensión (cadena lineal) \figref{fig:LCscheme}. 
 
 \begin{figure}
@@ -62,4 +65,4 @@ de modo que
 
 \input{./tex/Modelo_de_Cadena_Lineal/Conductividad}
 	
-\input{./tex/Modelo_de_Cadena_Lineal/Dinamica_de_Espin}
+% \input{./tex/Modelo_de_Cadena_Lineal/Dinamica_de_Espin}
